# ShowMe

./: .env  Cargo.toml  diesel.toml
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.css  App.tsx  index.css
migrations/2024-08-25-091758_Users/: up.sql
src/: authentication.rs  error.rs  lib.rs  main.rs  model.rs  schema.rs  utils.rs
src/web/: mod.rs  routes_signup.rs
