[package]
name = "gp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
cookie = "0.18.1"
diesel = { version = "2.2.3", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
getrandom = "0.2.15"
http = "1.1.0"
pbkdf2 = { version = "0.12.2", features = ["password-hash", "simple"] }
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["postgres"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs"] }
